--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Assignment 01</h5>
                         <p class="card-text">First web application with JSP</p>
-                        <a href="https://hohuyhoang-week-ass5.herokuapp.com/"
+                        <a href="https://assignment-one-hohuyhoangg.herokuapp.com/"
                             class="btn btn-primary ">Go</a>
                     </div>
                 </div>
