update assignment two

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/beach.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/beach.png">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -178,6 +178,30 @@
                         <p class="card-text">First web application with JSP</p>
                         <a href="https://assignment-one-hohuyhoangg.herokuapp.com/"
                             class="btn btn-primary ">Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="assignment__web">
+                <h3>Assignment 02</h3>
+                <hr />
+                <div class="form-group row">
+                    <div class="card text-center border-danger col-3 ml-3" style="width: 22rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Assignment 02 - 1</h5>
+                            <p class="card-text">Widget order form</p>
+                            <a
+                                href="https://assignment-two-1-hohuyhoangg.herokuapp.com/"
+                                class="btn btn-primary ">Go</a>
+                        </div>
+                    </div>
+                    <div class="card text-center border-danger col-3 ml-3" style="width: 22rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Assignment 02 - 2</h5>
+                            <p class="card-text">Complex input element</p>
+                            <a
+                                href="$https://assignment-two-2-hohuyhoangg.herokuapp.com/"
+                                class="btn btn-primary ">Go</a>
+                        </div>
                     </div>
                 </div>
             </div>
