--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="assignment__web">
                 <h3>Assignment 02</h3>
                 <hr />
-                <div class="form-group row">
+                <div class="form-group">
                     <div class="card text-center border-danger col-3 ml-3" style="width: 22rem;">
                         <div class="card-body">
                             <h5 class="card-title">Assignment 02 - 1</h5>
