--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <h5 class="card-title">Assignment 02 - 2</h5>
                             <p class="card-text">Complex input element</p>
                             <a
-                                href="$https://assignment-two-2-hohuyhoangg.herokuapp.com/"
+                                href="https://assignment-two-2-hohuyhoangg.herokuapp.com/"
                                 class="btn btn-primary ">Go</a>
                         </div>
                     </div>
