--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="card text-center border-danger" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Assignment 01</h5>
-                        <p class="card-text">First web application with JSP</p>
+                        <p class="card-text">First Web Application With JSP</p>
                         <a href="https://assignment-one-hohuyhoangg.herokuapp.com/"
                             class="btn btn-primary ">Go</a>
                     </div>
@@ -187,8 +187,8 @@
                 <div class="form-group">
                     <div class="card text-center border-danger col-3 ml-3" style="width: 18rem;">
                         <div class="card-body">
-                            <h5 class="card-title">Assignment 02 - 1</h5>
-                            <p class="card-text">Widget order form</p>
+                            <h5 class="card-title">Assignment 02 - 01</h5>
+                            <p class="card-text">Java Server Pages for Complex Forms</p>
                             <a
                                 href="https://assignment-two-1-hohuyhoangg.herokuapp.com/"
                                 class="btn btn-primary ">Go</a>
@@ -196,8 +196,10 @@
                     </div>
                     <div class="card text-center border-danger col-3 ml-3" style="width: 18rem;">
                         <div class="card-body">
-                            <h5 class="card-title">Assignment 02 - 2</h5>
-                            <p class="card-text">Complex input element</p>
+                            <h5 class="card-title">Assignment 02 - 02</h5>
+                            <p class="card-text">Complex Input Element
+                                <br/> .
+                            </p>
                             <a
                                 href="https://assignment-two-2-hohuyhoangg.herokuapp.com/"
                                 class="btn btn-primary ">Go</a>
@@ -205,6 +207,43 @@
                     </div>
                 </div>
             </div>
+            <div class="assignment__web">
+                <h3>Assignment 03</h3>
+                <hr />
+                <div class="form-group row">
+                    <div class="card text-center border-danger col-3 ml-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Assignment 03 - 1</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">(Servlet)</h6>
+                            <p class="card-text">Java Server Pages for Complex Forms</p>
+                            <a
+                                href="${pageContext.request.contextPath}/assignment03/ass03_01.jsp"
+                                class="btn btn-primary ">Go</a>
+                        </div>
+                    </div>
+                    <div class="card text-center border-danger col-3 ml-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Assignment 03 - 2</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">(Servlet)</h6>
+                            <p class="card-text">Java Server Pages for Complex Forms</p>
+                            <a
+                                href="${pageContext.request.contextPath}/assignment03/ass03_02.jsp"
+                                class="btn btn-primary ">Go</a>
+                        </div>
+                    </div>
+                    <div class="card text-center border-danger col-3 ml-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Assignment 03 - 3</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">(Servlet)</h6>
+                            <p class="card-text">Complex Input Element <br/>.</p>
+                            <a
+                                href="${pageContext.request.contextPath}/assignment03/ass03_03.jsp"
+                                class="btn btn-primary ">Go</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <!-- End Assignment -->
             
