--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
                 </div>
             </div>
             <div class="assignment__web">
-                <h3>Assignment 03</h3>
+                <h3>Assignment 03 - Servlet</h3>
                 <hr />
-                <div class="form-group row">
+                <div class="form-group ass03">
                     <div class="card text-center border-danger col-3 ml-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Assignment 03 - 01</h5>
@@ -241,9 +241,9 @@
                 </div>
             </div>
             <div class="assignment__web">
-                <h3>Assignment 04</h3>
+                <h3>Assignment 04 - Servlet</h3>
                 <hr />
-                <div class="form-group row">
+                <div class="form-group">
                     <div class="card text-center border-danger col-3 ml-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Assignment 04 - 01</h5>
