--- a/index.html
+++ b/index.html
@@ -273,6 +273,19 @@
                     </div>
                 </div>
             </div>
+            <div class="assignment__web">
+                <h3>Assignment 05</h3>
+                <hr />
+                <div class="card text-center border-danger" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Assignment 05</h5>
+                        <p class="card-text">View-Controller Architecture To Implement This Assignment</p>
+                        <a href="${pageContext.request.contextPath}/assignment05/"
+                            class="btn btn-primary ">Go</a>
+                    </div>
+                </div>
+            </div>
+            <hr />
         </div>
         <!-- End Assignment -->
             
