--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
                 </div>
             </div>
             <div class="assignment__web">
-                <h3>Assignment 05</h3>
+                <h3>Assignment 05 - Servlet</h3>
                 <hr />
                 <div class="card text-center border-danger" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Assignment 05</h5>
                         <p class="card-text">View-Controller Architecture To Implement This Assignment</p>
-                        <a href="${pageContext.request.contextPath}/assignment05/"
+                        <a href="https://assignment-five-hohuyhoangg.herokuapp.com/"
                             class="btn btn-primary ">Go</a>
                     </div>
                 </div>
