--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <h5 class="card-title">Assignment 03 - 01</h5>
                             <p class="card-text">Java Server Pages for Complex Forms</p>
                             <a
-                                href="${pageContext.request.contextPath}/assignment03/ass03_01.jsp"
+                                href="https://assignment-three-1-hohuyhoangg.herokuapp.com/"
                                 class="btn btn-primary ">Go</a>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                             <h5 class="card-title">Assignment 03 - 02</h5>
                             <p class="card-text">Java Server Pages for Complex Forms</p>
                             <a
-                                href="${pageContext.request.contextPath}/assignment03/ass03_02.jsp"
+                                href="https://assignment-three-2-hohuyhoangg.herokuapp.com/"
                                 class="btn btn-primary ">Go</a>
                         </div>
                     </div>
@@ -234,7 +234,7 @@
                             <h5 class="card-title">Assignment 03 - 03</h5>
                             <p class="card-text">Complex Input Element <br/>.</p>
                             <a
-                                href="${pageContext.request.contextPath}/assignment03/ass03_03.jsp"
+                                href="https://assignment-three-3-hohuyhoangg.herokuapp.com/"
                                 class="btn btn-primary ">Go</a>
                         </div>
                     </div>
